--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DB_HOST_NAME = 'localhost'
 DB_DATABASE_NAME = 'cheval_simulator'
 DB_ROOT_USERNAME = 'root'
 DB_ROOT_PASS = ''
+DB_CS_COMMUNITY_MANAGER_USERNAME = 'cs_community_manager'
+DB_CS_COMMUNITY_MANAGER_PASS = 'password'
