update : resolving dbconf issues

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST_NAME = 'localhost'
 DB_DATABASE_NAME = 'cheval_simulator'
 DB_ROOT_USERNAME = 'root'
-DB_ROOT_PASS = ''
+DB_ROOT_PASS = 'Qwerty123'
 DB_CS_DEV_USERNAME = 'cs_dev'
 DB_CS_DEV_PASS = 'password'
 DB_CS_SPECIALISTE_CHEVAL_USERNAME = 'cs_specialiste_cheval'
@@ -11,8 +11,8 @@ DB_CS_EDITO_PASS = 'ILoveCheval_86'
 DB_CS_CLIENT_USERNAME = 'cs_client'
 DB_CS_CLIENT_PASS = 'ILoveCheval_86'
 DB_CS_ADMIN_USERNAME = 'cs_admin'
-DB_CS_ADMIN_PASS = 'clecle974'
+DB_CS_ADMIN_PASS = 'ILoveCheval_86'
 DB_CS_ADMIN_CONCOURS_USERNAME = 'cs_admin_concours'
-DB_CS_ADMIN_CONCOURS_PASS = 'clecle974'
+DB_CS_ADMIN_CONCOURS_PASS = 'ILoveCheval_86'
 DB_CS_COMMUNITY_MANAGER_USERNAME = 'cs_community_manager'
-DB_CS_COMMUNITY_MANAGER_PASS = 'password'
+DB_CS_COMMUNITY_MANAGER_PASS = 'ILoveCheval_86'
