update : resolving dbconf issues

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST_NAME = 'localhost'
+DB_HOST_NAME = '192.168.56.103'
 DB_DATABASE_NAME = 'cheval_simulator'
 DB_ROOT_USERNAME = 'root'
 DB_ROOT_PASS = 'Qwerty123'
