update : still more dbconf issues + is mariadb racist ?

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST_NAME = '192.168.56.103'
 DB_DATABASE_NAME = 'cheval_simulator'
-DB_ROOT_USERNAME = 'root'
+DB_ROOT_USERNAME = 'adminer'
 DB_ROOT_PASS = 'Qwerty123'
 DB_CS_DEV_USERNAME = 'cs_dev'
 DB_CS_DEV_PASS = 'password'
